--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,35 @@ dependencies:
   json_annotation: ^4.7.0
   freezed_annotation: ^2.2.0
 
+  # 缓存
   hive_flutter: ^1.1.0
+  # 弹窗
   bot_toast: ^4.0.3
+  # 刷新
   easy_refresh: ^3.0.5
+  # 加载
   infinite_scroll_pagination: ^3.2.0
+  # loading动画
   flutter_spinkit: ^5.1.0
+  # 动画构造
   simple_animations: ^5.0.0+3
+  # 路由管理
+  go_router: ^5.2.0
+  # 网络请求
+  dio: ^4.0.6
+  # 网络图片加载
+  cached_network_image: ^3.2.2
+  # 
+  photo_view: ^0.14.0
+
+
+  intl: ^0.17.0
+
+  # 媒体库
+  ffmpeg_kit_flutter_full: ^5.1.0-LTS
+
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -57,8 +80,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   # a tool for running code generators
   # flutter pub run build_runner watch -d
-  # flutter pub run build_runner run
+  # flutter pub run build_runner run build
   build_runner:
+  flutter_gen_runner:
   # the code generator
   riverpod_generator:
   # riverpod_lint makes it easier to work with Riverpod
@@ -80,8 +104,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
