--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -28,5 +28,13 @@ linter:
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
 analyzer:
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+    - /**/generated/**/*.dart
+  errors:
+    invalid_annotation_target: ignore
+    use_build_context_synchronously: ignore
+    unused_element: ignore
   plugins:
     - custom_lint
