--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,72 +30,46 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  # or flutter_riverpod/hooks_riverpod as per https://riverpod.dev/docs/getting_started
-  flutter_riverpod:
-  # the annotation package containing @riverpod
-  riverpod_annotation:
-
   hooks_riverpod: ^2.1.1
+  riverpod_annotation:
   json_annotation: ^4.7.0
   freezed_annotation: ^2.2.0
-
-  # 缓存
   hive_flutter: ^1.1.0
-  # 弹窗
   bot_toast: ^4.0.3
-  # 刷新
   easy_refresh: ^3.0.5
-  # 加载
-  infinite_scroll_pagination: ^3.2.0
-  # loading动画
-  flutter_spinkit: ^5.1.0
-  # 动画构造
-  simple_animations: ^5.0.0+3
-  # 路由管理
   go_router: ^5.2.0
-  # 网络请求
   dio: ^4.0.6
-  # 网络图片加载
+  retrofit: ^3.3.1
+  event_bus: ^2.0.0
+  infinite_scroll_pagination: ^3.2.0
+  flutter_spinkit: ^5.1.0
+  simple_animations: ^5.0.0+3
   cached_network_image: ^3.2.2
-  # 
   photo_view: ^0.14.0
-
-
-  intl: ^0.17.0
-
-  # 媒体库
+  logger: ^1.2.2
   ffmpeg_kit_flutter_full: ^5.1.0-LTS
+  path_provider: ^2.0.13
+  crypto: ^3.0.2
+  intl: ^0.18.0
 
-
-  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
- 
   flutter_lints: ^2.0.0
-  # a tool for running code generators
-  # flutter pub run build_runner watch -d
-  # flutter pub run build_runner run build
   build_runner:
   flutter_gen_runner:
-  # the code generator
   riverpod_generator:
-  # riverpod_lint makes it easier to work with Riverpod
-  riverpod_lint:
-  # import custom_lint too as riverpod_lint depends on it
-  custom_lint:
   json_serializable: ^6.5.4
   freezed: ^2.3.0
-
+  retrofit_generator: ^4.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -107,13 +81,10 @@ flutter:
   assets:
     - assets/images/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -133,7 +104,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
 flutter_gen:
   output: lib/support_files/
-  line_length: 80 
+  line_length: 80
+flutter_intl:
+  enabled: true
