--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  flutter_hooks: 
   hooks_riverpod: ^2.1.1
   riverpod_annotation:
   json_annotation: ^4.7.0
@@ -54,7 +55,7 @@ dependencies:
   ffmpeg_kit_flutter_full: ^5.1.0-LTS
   path_provider: ^2.0.13
   crypto: ^3.0.2
-  intl: ^0.18.0
+  intl: ^0.17.0
 
 
 dev_dependencies:
