--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,17 +34,17 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_hooks: 
-  hooks_riverpod: ^2.1.1
-  riverpod_annotation:
+  flutter_hooks: ^0.18.6
+  hooks_riverpod: ^2.3.1
+  riverpod_annotation: ^2.0.1
   json_annotation: ^4.7.0
   freezed_annotation: ^2.2.0
   hive_flutter: ^1.1.0
   bot_toast: ^4.0.3
   easy_refresh: ^3.0.5
   go_router: ^5.2.0
-  dio: ^4.0.6
-  retrofit: ^3.3.1
+  dio: ^5.0.2
+  retrofit: ^4.0.1
   event_bus: ^2.0.0
   infinite_scroll_pagination: ^3.2.0
   flutter_spinkit: ^5.1.0
@@ -56,18 +56,18 @@ dependencies:
   path_provider: ^2.0.13
   crypto: ^3.0.2
   intl: ^0.17.0
-
+  star_menu: ^3.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  build_runner:
-  flutter_gen_runner:
-  riverpod_generator:
+  build_runner: ^2.3.3
+  flutter_gen_runner: ^5.2.0
+  riverpod_generator: ^2.1.3
   json_serializable: ^6.5.4
-  freezed: ^2.3.0
-  retrofit_generator: ^4.2.0
+  freezed: ^2.3.2
+  retrofit_generator: ^6.0.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
