--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   dio: ^5.0.2
   retrofit: ^4.0.1
   event_bus: ^2.0.0
-  infinite_scroll_pagination: ^3.2.0
+  infinite_scroll_pagination: 
+    git: https://github.com/boomcx/infinite_scroll_pagination.git
   flutter_spinkit: ^5.1.0
   simple_animations: ^5.0.0+3
   cached_network_image: ^3.2.2
