--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,9 @@ dependencies:
   intl: ^0.17.0
   star_menu: ^3.1.4
   tuple:
-
+  # custom 
+  spinner_box:
+    git: https://github.com/boomcx/spinner_box.git/
 
 dev_dependencies:
   flutter_test:
